--- a/react/band-page/about.html
+++ b/react/band-page/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>Alan Sutton y las criaturitas de la ansiedad</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     </header>
 
     <hr>
-    <h1>The Generics</h1>
+    <h1>Alan Sutton y las criaturitas de la ansiedad</h1>
     <h2>About</h2>
     <section>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -52,7 +52,7 @@
     </section>
 
     <footer>
-        <h3>The Generics</h3>
+        <h3>Alan Sutton y las criaturitas de la ansiedad</h3>
         <ul>
             <li><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
                     width="25"></li>
