--- a/react/band-page/index.html
+++ b/react/band-page/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Alan Sutton y las criaturitas de la ansiedad</title>
+    <meta name="description" content="This is practice page">
 </head>
 
 <body>
