brand-page: add links

--- a/react/band-page/store.html
+++ b/react/band-page/store.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li>HOME</li>
-                <li>STORE</li>
-                <li>ABOUT</li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="store.html">STORE</a></li>
+                <li><a href="about.html">ABOUT</a></li>
             </ul>
         </nav>
     </header>
@@ -126,11 +126,9 @@
     <footer>
         <h3>Alan Sutton y las criaturitas de la ansiedad</h3>
         <ul>
-            <li><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
-                    width="25"></li>
-            <li><img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" height="25"></li>
-            <li><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" width="25">
-            </li>
+            <li><a src="https://facebook.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" width="25"></a></li>
+            <li><a src="https://youtube.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" height="25"></a></li>
+            <li><a src="https://spotify.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" width="25"></a></li>
         </ul>
     </footer>
 </body>
